# wstartpage

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  dump.rdb  makefile
.run/: run-backend.run.xml  start-viewer.run.xml  watch-backend.run.xml  watch-frontend.run.xml
backend/: .env  Cargo.toml  dev-config.yml  http-client.env.json  requests.http
backend/misc/: dev-users.csv
backend/src/: app_config.rs  app_state.rs  main.rs  main_serve.rs  main_static_file_manage.rs
backend/src/data/: auth.rs  mod.rs  tile_collection.rs
backend/src/data_source/: file.rs  mod.rs
backend/src/model/: app_user.rs  image_attrs.rs  mod.rs  tile_collection.rs  user_info.rs
backend/src/routes/: frontend.rs  index.rs  mod.rs  redirect.rs
backend/src/routes/api/: icon_tiles.rs  images.rs  mod.rs  session.rs  tile_collections.rs  users.rs
backend/src/service/: app_config.rs  mod.rs  tile_collection.rs
backend/src/service/user_source/: mod.rs  no_user_source.rs  static.rs  static_file.rs
backend/src/user_source/: mod.rs  static.rs
backend/src/util/: app_error.rs  app_result.rs  security.rs
backend/src/utils/: http.rs  mod.rs  problem_details.rs  security.rs
frontend/: .env  editor.html  package-lock.json  package.json  viewer.html  vite.config.ts
frontend/public/: index.html
frontend/src/: appRender.tsx  const.ts  editor.tsx  theme.tsx  viewer.tsx
frontend/src/components/: CenterJS.tsx  Dialog.tsx  EnsureFontLoaded.tsx  MdiIcon.tsx  MyIcon.tsx  RequireAuth.tsx  RtkQueryGuard.tsx  Toolbar.tsx  UtilityElements.ts
frontend/src/components/admin/: ImageBrowser.tsx  ImageDialog.tsx  LoginPage.tsx  TileEditorPage.tsx
frontend/src/components/editor/: EditorBottomBar.tsx  EditorCollectionList.tsx  EditorContext.tsx  EditorFormContainer.tsx  EditorIconCollectionList.tsx  EditorLoginPage.tsx  EditorTopBar.tsx  FormContainer.tsx  SaveButton.tsx  StartPageEditor.tsx  TileCollectionForm.tsx  (+3 more)
frontend/src/data/: auth.ts  fetch.ts  hooks.ts  images.ts  redux.ts  tileCollection.ts
frontend/src/util/: function.ts  react.ts  typescript.ts
(+51 files in other folders)
