[package]
name = "wstartpage"
version = "0.0.1"
authors = ["Adam Jędrzejowski <adam@jedrzejowski.pl>"]
edition = "2018"

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-cors = "0.6.3"
actix-web-httpauth = "0.8.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
serde_json = "1.0.86"
serde_yaml = "0.9.13"
once_cell = "1.15.0"
envy = "0.4.2"
anyhow = "1.0.65"
futures = "0.3"
log = "0.4.17"
env_logger = "0.9.1"
mime = "0.3.16"
