[package]
name = "wstartpage"
version = "0.0.1"
authors = ["Adam Jędrzejowski <adam@jedrzejowski.pl>"]
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
anyhow = "1.0.75"
futures = "0.3.29"
log = "0.4.20"
env_logger = "0.10.0"
mime = "0.3.17"
envy = "0.4.2"
dotenv = "0.15.0"
async-trait = { version = "0.1.74", features = [] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["default", "fs"] }
csv = { version = "1.3.0", features = [] }
