[package]
name = "wstartpage"
version = "0.0.1"
authors = ["Adam Jędrzejowski <adam@jedrzejowski.pl>"]
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["default", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.33"
anyhow = "1.0.81"
futures = "0.3.30"
log = "0.4.21"
env_logger = "0.11.3"
mime = "0.3.17"
envy = "0.4.2"
dotenv = "0.15.0"
async-trait = { version = "0.1.79", features = [] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
csv = { version = "1.3.0", features = [] }
http = "1.1.0"
